--- a/style.css
+++ b/style.css
@@ -2,34 +2,48 @@ h1 {
   text-align: center;
 }
 
-.image-container {
+#image-container {
   display: flex;
   justify-content: center;
   gap: 32px;
   flex-wrap: wrap;
   align-items: center;
+  width: 75%;
+  margin: auto;
 }
 
-.image-container > div {
+#image-container > div {
   flex: 1 1 0;
   flex-direction: column;
   display: flex;
   border: thin solid black;
 }
 
-.image-container div > img {
+#image-container div > img {
   max-width: 100%;
   min-width: 0px;
   flex: 1 1 auto;
 }
 
-.image-container div > button {
+#image-container div button {
   min-width: 8em;
+  width: 100%;
   height: 3em;
   border-radius: 0px;
   border: 0px;
 }
 
-.image-container div > button:hover {
+#image-container div button:hover {
   background-color: rgb(150, 150, 150);
+}
+
+#reminder {
+  text-align: center;
+  text-decoration: underline;
+  color: hsl(0, 100%, 25%);
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
