--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
-h1 {
+body {
+  background-color: wheat;
+}
+
+.header , h2{
   text-align: center;
+}
+
+.header p {
+  font-style: italic;
 }
 
 #image-container {
@@ -9,25 +17,22 @@ h1 {
   flex-wrap: wrap;
   align-items: center;
   width: 75%;
-  margin: auto;
+  margin: 20px auto 40px auto;
 }
 
 #image-container > div {
-  flex: 1 1 0;
   flex-direction: column;
   display: flex;
   border: thin solid black;
 }
 
 #image-container div > img {
-  max-width: 100%;
   min-width: 0px;
-  flex: 1 1 auto;
+  width: 150px;
+  height: auto;
 }
 
 #image-container div button {
-  min-width: 8em;
-  width: 100%;
   height: 3em;
   border-radius: 0px;
   border: 0px;
@@ -39,11 +44,6 @@ h1 {
 
 #reminder {
   text-align: center;
-  text-decoration: underline;
+  font-style: italic;
   color: hsl(0, 100%, 25%);
-}
-
-a {
-  text-decoration: none;
-  color: black;
 }
