--- a/style.css
+++ b/style.css
@@ -4,11 +4,9 @@ body {
 
 .header , h2{
   text-align: center;
+  margin-bottom: 40px;
 }
 
-.header p {
-  font-style: italic;
-}
 
 #image-container {
   display: flex;
