--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: "Courier", monospace;
+}
+
 body {
   background-color: wheat;
 }
@@ -110,4 +114,8 @@ body {
 
 #results .message {
   width: 150px;
+}
+
+#results .label {
+  font-weight: 700;
 }
